[gd_scene load_steps=15 format=2]

[ext_resource path="res://Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/menubg.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/ka1.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/menubgm.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/ArcadeClassic-ov2x.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.752941, 0.384314, 0.384314, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.490196, 0.203922, 0.203922, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0.156863, 0.0431373, 0.0431373, 0.6 )
shadow_size = 5
shadow_offset = Vector2( 5, 5 )

[sub_resource type="StyleBoxFlat" id=5]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0.0745098, 0.0705882, 0.0705882, 0.6 )
shadow_size = 5
shadow_offset = Vector2( 5, 5 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.168627, 0.129412, 0.129412, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.286275, 0.133333, 0.392157, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0.133333, 0.054902, 0.180392, 0.6 )
shadow_size = 5
shadow_offset = Vector2( 5, 5 )

[sub_resource type="StyleBoxLine" id=6]
color = Color( 0.396078, 0.333333, 0.482353, 1 )
thickness = 10

[sub_resource type="StyleBoxLine" id=9]
color = Color( 0.768627, 0.662745, 0.862745, 1 )
thickness = 10

[sub_resource type="StyleBoxLine" id=7]
color = Color( 0.768627, 0.662745, 0.862745, 1 )
thickness = 10

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 5 )

[node name="Menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.5
margin_top = -36.0
margin_right = 106.5
margin_bottom = 36.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 116.5, -42 )
scale = Vector2( 0.347539, 0.40625 )
texture = ExtResource( 2 )

[node name="GameTitle" type="Label" parent="."]
margin_left = -170.5
margin_top = -185.0
margin_right = 412.5
margin_bottom = -20.0
custom_colors/font_color = Color( 0.658824, 0.576471, 0.72549, 1 )
custom_fonts/font = SubResource( 1 )
text = "ASTEROIDS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0
autoplay = true

[node name="Classic" type="Button" parent="."]
anchor_left = 0.544
anchor_top = -0.025
anchor_right = 0.544
anchor_bottom = -0.025
margin_left = -90.065
margin_top = 0.0202149
margin_right = 89.935
margin_bottom = 40.0202
hint_tooltip = "Classic Asteroids. Use arrow keys to thrust foward, to turn left/right, and to teleport to random location. Use spacebar to shoot laser."
custom_colors/font_color = Color( 0.686275, 0.921569, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
text = "CLASSIC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Variant" type="Button" parent="."]
anchor_left = 0.645
anchor_top = -0.044
anchor_right = 0.645
anchor_bottom = -0.044
margin_left = -111.578
margin_top = 53.168
margin_right = 68.422
margin_bottom = 93.168
hint_tooltip = "Base defense aseroids. Use left/right arrow keys to move in circle, and use space bar to shoot laser."
custom_colors/font_color = Color( 0.686275, 0.921569, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
text = "VARIANT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
anchor_left = 0.645
anchor_top = -0.044
anchor_right = 0.645
anchor_bottom = -0.044
margin_left = -111.578
margin_top = 108.168
margin_right = 68.422
margin_bottom = 148.168
custom_colors/font_color = Color( 0.686275, 0.921569, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundControl" type="HSlider" parent="."]
margin_left = 473.5
margin_top = 297.0
margin_right = 603.5
margin_bottom = 322.0
custom_styles/slider = SubResource( 6 )
custom_styles/grabber_area_highlight = SubResource( 9 )
custom_styles/grabber_area = SubResource( 7 )
min_value = -40.0
max_value = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 396.5
margin_top = 291.0
margin_right = 478.5
margin_bottom = 327.0
custom_colors/font_color = Color( 0.666667, 0.772549, 0.815686, 1 )
custom_fonts/font = SubResource( 8 )
text = "Sound"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Classic" to="." method="_on_Asteroids_pressed"]
[connection signal="pressed" from="Variant" to="." method="_on_Game2_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="value_changed" from="SoundControl" to="." method="_on_SoundControl_value_changed"]
